--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     </style>
     <script src="d3/d3.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?sensor=True&key=AIzaSyCCHpi3mROOqKFsJHHAsEOtMMkVCw7y6HU"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCHpi3mROOqKFsJHHAsEOtMMkVCw7y6HU"></script>
     <script src="conrec.js", type="text/javascript"> </script>
     <script src="overlay.js", type="text/javascript"> </script>
 
