--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <style>
       #map {
         height: 100%;
+        width: 100%;
       }
 
       html, body {
         height: 100%;
+        width: 100%;
         margin: 0;
         padding: 0;
       }
-
+/* 
 .stations, .stations svg, .contour {
   position: absolute;
 }
@@ -22,7 +24,7 @@
   height: 20px;
   padding-right: 100px;
   font: 8px sans-serif;
-}
+} */
 
     </style>
     <script src="d3/d3.min.js"></script>
