--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         margin: 0;
         padding: 0;
       }
-/* 
+/*
 .stations, .stations svg, .contour {
   position: absolute;
 }
@@ -27,8 +27,8 @@
 } */
 
     </style>
-    <script src="d3/d3.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?sensor=True&key=AIzaSyCCHpi3mROOqKFsJHHAsEOtMMkVCw7y6HU"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCHpi3mROOqKFsJHHAsEOtMMkVCw7y6HU"></script>
     <script src="conrec.js", type="text/javascript"> </script>
     <script src="overlay.js", type="text/javascript"> </script>
 
