--- a/index.html
+++ b/index.html
@@ -5,36 +5,29 @@
     <style>
       #map {
         height: 100%;
-        width: 100%;
       }
 
       html, body {
         height: 100%;
-        width: 100%;
         margin: 0;
         padding: 0;
       }
-/*
-.stations, .stations svg, .contour {
-  position: absolute;
-}
 
-.stations svg {
-  width: 60px;
-  height: 20px;
-  padding-right: 100px;
-  font: 8px sans-serif;
-} */
 
     </style>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCHpi3mROOqKFsJHHAsEOtMMkVCw7y6HU"></script>
-    <script src="conrec.js", type="text/javascript"> </script>
-    <script src="overlay.js", type="text/javascript"> </script>
+    <script src="data.js"></script>
 
-
+    <script>
+      var ready = function() {
+        initMap(shapes);
+      }
+      </script>
   </head>
   <body>
     <div id="map"> </div>
+    <script src="drawing.js", type="text/javascript"> </script>
+
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCHpi3mROOqKFsJHHAsEOtMMkVCw7y6HU&callback=ready"></script>
+
   </body>
 </html>
