--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     </style>
-    <script src="data.js"></script>
+    <script src="https://github.com/DataScience-GT/AtlCrime/blob/master/data.js?raw=true"></script>
 
     <script>
       var ready = function() {
